--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.github_repo }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Cursos del Instituto de Ciensas Sostenible
+title: Cursos ICS
 tagline: A Jekyll template for course websites
 description: Cursos para ICS
 author: Jose G. Juarez (Willy)
@@ -28,10 +28,10 @@ search_enabled: true
 heading_anchors: true
 permalink: pretty
 aux_links:
-  ICS_Cursos:
-    - 'https://ICS_Cursos.github.io'
-  Just the Class on GitHub:
-    - 'https://github.com/kevinlin1/just-the-class'
+  SSI (ICS):
+    - 'https://www.sustainablesciences.org'
+  A2CARES:
+    - 'https://www.a2cares.com'
 footer_content:
 
 # Collections for website data
